components/ra/user-claims-backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-claims-backend
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        co.elastic.logs/processors.add_fields.target: ""
        co.elastic.logs/processors.add_fields.fields.application.name: "user-claims-backend"
        co.elastic.logs/processors.add_fields.fields.application.domain: "user-claims"
        co.elastic.logs/processors.add_fields.fields.application.tier: web
        co.elastic.logs/processors.add_fields.fields.application.language: "typescript"
        # Extract log_level, class, and log_message as separate fields for elastic
        co.elastic.logs/processors.dissect.tokenizer: "%{?date} %{?time} %{log_level->} %{log_message}"
        co.elastic.logs/processors.dissect.target_prefix: ""
        co.elastic.logs/multiline.pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}"
        co.elastic.logs/multiline.negate: "true"
        co.elastic.logs/multiline.match: "after"
    spec:
      containers:
        - name: user-claims-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uploads
              mountPath: "/app/uploads"
              readOnly: false
          readinessProbe:
            httpGet:
              path: /user-claims-api/health/ready
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: uploads
          emptyDir: {}
