components/ra/user-claims-backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-claims-backend
spec:
  ports:
    - name: https
      protocol: TCP
      port: 3001
      targetPort: 3001
